; ModuleID = '/home/carl/AnghaBench/tengine/src/os/unix/extr_ngx_process.c_ngx_execute.c'
source_filename = "/home/carl/AnghaBench/tengine/src/os/unix/extr_ngx_process.c_ngx_execute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@ngx_execute_proc = common dso_local global i32 0, align 4
@NGX_PROCESS_DETACHED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ngx_execute(i32* %0, %struct.TYPE_4__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @ngx_execute_proc, align 4
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @NGX_PROCESS_DETACHED, align 4
  %12 = call i32 @ngx_spawn_process(i32* %5, i32 %6, %struct.TYPE_4__* %7, i32 %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @ngx_spawn_process(i32*, i32, %struct.TYPE_4__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
